# object-store-rs

./: README.md
data-indexer/: Cargo.toml  Dockerfile
data-indexer/src/: config.rs  file_data.rs  lib.rs  main.rs
data-indexer/src/utils/: aws.rs  constants.rs  datafusion.rs  tracing.rs
dataplatform-sdk-api/: Cargo.toml  Dockerfile  api_schema.yml
dataplatform-sdk-api/src/: error.rs  lib.rs  main.rs
dataplatform-sdk-api/src/data_store/: aws.rs  catalog.rs  error.rs  mod.rs
dataplatform-sdk-api/src/routes/: alive.rs  catalog.rs  download.rs  mod.rs  route.rs  select.rs
dataplatform-sdk-api/src/utils/: aws.rs  constants.rs  datafusion.rs  error.rs  mod.rs  queryparser.rs
dataplatform-sdk-api/tests/api/: alive.rs  catalog.rs  constants.rs  download.rs  helpers.rs  main.rs  select.rs
dataplatform-worker/: Cargo.toml  Dockerfile
dataplatform-worker/src/: error.rs  lib.rs  main.rs  worker.rs
dataplatform-worker/src/utils/: aws.rs  constants.rs  datafusion.rs  mod.rs  tracing.rs
object-store-client/: README.md  object_store_client.py  requirements.txt
object-store-web-ui/: .gitignore  Cargo.toml  README.md
object-store-web-ui/src/: app.rs  main.rs
object-store-web-ui/src/components/: catalog_result.rs  download_result.rs  error_msg.rs  mod.rs  operation.rs  query_editor.rs  select_result.rs  spinner.rs
object-store-web-ui/src/pages/: catalog.rs  docs.rs  home.rs  mod.rs
object-store-web-ui/src/utils/: constraints.rs  mod.rs  tools.rs
scripts/: combine_catalog_files.py  combine_idx_files.py
