[package]
name = "data-indexer"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tokio-util = "0.7"
datafusion = { version = "42", features = ["default"] }
chrono = "0.4"
arrow-json = "53"
parquet = "53"
aws-config = "1.6.2"
aws-sdk-s3 = "1.83.0"
aws-smithy-types = "1.3.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.91"
regex = "1.11"
anyhow = "1.0"
uuid = { version = "1.16", features = ["v4"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["json"] }

[dev-dependencies]
rstest = "0.24"
