[package]
name = "dataplatform-sdk-api"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = "1"
aws-sdk-s3 = "1"
aws-sdk-ecs = "1"
aws-creds = "0.37"
aws-smithy-types = "1.2"
color-eyre = "0.6"
datafusion = { version = "46.0.1", features = ["default"] }
dotenvy = "0.15.7"
http = "1"
object_store = { version = "0.11", features = ["aws", "cloud"] }
lambda_runtime = "0.13"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features= ["full"] }
tokio-stream = "0.1"
tokio-util = { version = "0.7", features = ["full"] }
thiserror = "2.0.2"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["json"] }
sqlparser = "0.56"
url = "2"

[dev-dependencies]
async_zip = { version = "0.0.17", features = ["full"] }
futures-lite = { version = "2.1.0", default-features = false, features = ["std"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rstest = "0.24"
tempfile = "3.21"
